Nutch Change Log

Current Development 2.3-SNAPSHOT

* NUTCH-1899 upgrade restlet lib to prevent build failure (talat)

* NUTCH-1797 remove unused package o.a.n.html (Saurabh Chhajed via snagel)

* NUTCH-1888 Specify HTMLMapper to use in TikaParser (Halil Simsek via jnioche)

* NUTCH-1897 Easier debugging of plugin XML errors (markus)

* NUTCH-1823 Upgrade to elasticsearch 1.4.1 (Phu Kieu, markus, lewismc)

* NUTCH-1829 Generator : unable to distinguish real errors (Mathieu Bouchard, jnioche, snagel)

* NUTCH-1778 Generator not logging number of URLs in batch correctly (jnioche via snagel)

* NUTCH-1877 Suffix URL filter to ignore query string by default (markus via snagel)

* NUTCH-1825 protocol-http may hang for certain web pages (Phu Kieu via snagel)

* NUTCH-1483 Can't crawl filesystem with protocol-file plugin (Rogério Pereira Araújo, Mengying Wang, snagel)

* NUTCH-1885 Protocol-file should treat symbolic links as redirects (Mengying Wang, snagel)

* NUTCH-1880 URLUtil should not add additional slashes for file URLs (snagel)

* NUTCH-1879 Regex URL normalizer should remove multiple slashes after file: protocol (snagel)

* NUTCH-1820 remove field "orig" which duplicates "id" (lewismc, snagel)

* NUTCH-1843 Upgrade to Gora 0.5 (talat, lewismc, Kiril Menshikov, drazzib)

* NUTCH-1883 bin/crawl: use function to run bin/nutch and check exit value (snagel)

* NUTCH-1882 ant eclipse target to add output path to src/test (snagel)

* NUTCH-1827 Port NUTCH-1467 and NUTCH-1561 to 2.x (snagel)

* NUTCH-1876 Upgrade to Crawler Commons 0.5 (jnioche)

* NUTCH-1866 ant eclipse target should not delete runtime (nimafl via lewismc)

* NUTCH-1859 Make Nutch webapp port configurable (Nima Falaki via lewismc)

* NUTCH-1848 Bug in DashboardPage.html instances counter (Nima Falaki via lewismc)

* NUTCH-841 Create a Wicket-based Web Application for Nutch (Fjodor Vershinin via lewismc)

* NUTCH-1832 Make Nutch work without an indexer (mattmann via lewismc)
